# GolekThreat

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  e2e-smoke.yml  pages.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/golekthreat/: config.py  db.py  main.py  models.py  schemas.py  seed.py  services.py
backend/golekthreat_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: test_services.py
docs/: architecture.md  index.html  mitre-data.md  operations.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/public/: mitreCatalog.json
frontend/src/: api.ts  main.tsx  mitreCatalog.ts  styles.css  types.ts
scripts/: generate_mitre_catalog.py  scheduler.py  sync_detection_rules.py
